@startuml
package activity.package {
  class ResourceFactory {
    create_resource(type, kwargs)
  }

  class DeliverableFactory {
    create_deliverable(type, kwargs)
  }

  class Resource {
    title : string,
    hyperlink : string,
    type : string,
  }

  abstract Activity
  ResourceFactory --> Resource: creates
  DeliverableFactory --> Deliverable: creates
  Activity <.. Resource : "implements"
  Activity <.. Deliverable : "implements"

  Resource <.. URL : "implements"
  Resource <.. Document : "implements"
  Resource <.. Video : "implements"

  class Deliverable {
    title : string,
    weight : float,
    type : string
  }

  class Quiz {
    time_opened : string,
    time_closed : string,
    allotted_time : string,
    type : string
  }

  class Assignment {
    due_date : datetime,
    submission_type : string,
  }

  Deliverable <.. Tutorial : "implements"
  Deliverable <.. Quiz : "implements"
  Deliverable <.. Assignment : "implements"
}

abstract class ActivityFactory {
  create_activity(deliverable_type, kwargs)
}

ActivityFactory <.. ResourceFactory : extends
ActivityFactory <.. DeliverableFactory : extends

@enduml
